src/app/(components)/(Navbar)/Navbar.css
nav {
    position: relative;
    padding: 1vw 4vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0px 5px 15px #00000061;
}

img.logo {
    width: auto;
    max-width: 100%;
    max-height: 90px;
}

.links {
    display: flex;
    gap: 2em;
}

.links a {
    font-weight: 200;
    font-size: 18px;
}

.links .dropdow-menu {
    font-weight: 200;
    font-size: 18px;
}

.dropdow-menu {
    display: flex;
    flex-direction: column;
}

.dropdown-menu-header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: .5em;
}

.dropdown-menu-body {
    display: none;
    width: 145px;
    padding: 0.5em 1em;
    position: absolute;
    top: 59%;
    background: white;
    flex-direction: column;
    gap: 1em;
}

.dropdown-menu-header:hover + .dropdown-menu-body {
    display: flex;
}

.dropdown-menu-body:hover {
    display: flex;
}

.dropdown-option button {
    background: transparent;
    border: none;
    font-size: 16px;
    font-family: "Montserrat", sanse;
    font-weight: 300;
    cursor: pointer;
    width: 100%;
    text-align: left;
}

